--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 .monto{
+    position: fixed;
     background-color: #2b3035;
     color: aliceblue;
-    border-radius: 15px;
     text-align: center;
-    margin-bottom: -30px;
+    margin-top: 460px;
+    margin-left: 75%;
+    width: 300px;
+    height: 35px;
+    font-size: 20px;
 }
