--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+img{
+    width: 40px;
+    height: 40px;
+}
 .monto{
     position:absolute;
     background-color: #2b3035;
@@ -22,3 +26,4 @@
     visibility: hidden;
     position: absolute;
 }
+
